grafana/kubernetes/overlays/prod/renderer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-image-renderer
  labels:
    app: grafana-image-renderer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-image-renderer
  template:
    metadata:
      labels:
        app: grafana-image-renderer
    spec:
      containers:
      - name: grafana-image-renderer
        image: grafana/grafana-image-renderer:latest
        ports:
        - containerPort: 8081


---
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  labels:
    app: grafana-image-renderer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: grafana-image-renderer
